--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^25.0.0",
+    "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-easy-grid": "^0.1.17",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
