--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-easy-grid": "^0.1.17",
+    "react-native-star-rating": "^1.0.9",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
