--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-easy-grid": "^0.1.17",
+    "react-native-image-preview": "^0.3.1",
     "react-native-image-resizer": "^1.0.0",
     "react-native-star-rating": "^1.0.9",
     "react-native-vector-icons": "^4.5.0",
