--- a/app.json
+++ b/app.json
@@ -1,5 +1,27 @@
 {
   "expo": {
-    "sdkVersion": "25.0.0"
+    "name": "PicFood",
+    "icon": "./assets/cheese.png",
+    "version": "1.0.0",
+    "slug": "pic-food",
+    "sdkVersion": "25.0.0",
+    "ios": {
+      "bundleIdentifier": "com.pic-food.picfood",
+      "publishBundlePath": "ios/picfood/Supporting/shell-app.bundle",
+      "publishManifestPath": "ios/picfood/Supporting/shell-app-manifest.json"
+    },
+    "android": {
+      "package": "com.pic-food.picfood",
+      "publishBundlePath": "android/app/src/main/assets/shell-app.bundle",
+      "publishManifestPath": "android/app/src/main/assets/shell-app-manifest.json"
+    },
+    "ignoreNodeModulesValidation": true,
+    "isDetached": true,
+    "detach": {
+      "scheme": "expb340cf2726d2458aa4283852c34b87da",
+      "iosExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/ios-v2.3.3-sdk25.0.0-e7a4361a-631d-4caf-9692-1880d71c394a.tar.gz",
+      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v2.3.0-sdk25.0.0-0c32461b-a7c6-4ddc-b85b-32a80c4f18d9.tar.gz"
+    },
+    "scheme": "expb340cf2726d2458aa4283852c34b87da"
   }
 }
