--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo": "^25.0.0",
     "native-base": "^2.3.9",
     "react": "16.2.0",
-    "react-native": "0.52.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-easy-grid": "^0.1.17",
     "react-native-image-resizer": "^1.0.0",
     "react-native-image-zoom-viewer": "^2.1.3",
