--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-easy-grid": "^0.1.17",
     "react-native-image-resizer": "^1.0.0",
     "react-native-image-zoom-viewer": "^2.1.3",
+    "react-native-really-awesome-button": "^0.8.3",
     "react-native-star-rating": "^1.0.9",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.11",
